--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.23",
     "@vue/repl": "^1.0.0",
     "amfe-flexible": "^2.2.1",
+    "echarts": "^5.3.2",
     "element-plus": "^2.1.8",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
