--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.23",
     "@vue/repl": "^1.0.0",
     "amfe-flexible": "^2.2.1",
