--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^17.0.23",
     "@vue/repl": "^1.0.0",
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.8",
     "vue": "^3.2.25",
