--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/utils/index.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
