--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
     "postcss-pxtorem": "^6.0.0",
+    "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.0",
+    "vite-plugin-optimize-persist": "^0.1.2",
+    "vite-plugin-package-config": "^0.1.1",
     "vue-tsc": "^0.29.8"
   }
 }
